# CosmosCanvas

./: .gitignore  1. Plot Spectral Index.ipynb  2. Plot Spectral Index Error.ipynb  3. Plot Velocity Fields.ipynb  MANIFEST.in  pyproject.toml  specindex.py  velmap.py  version.py
CosmosCanvas/: __init__.py
CosmosCanvas/code/: galfits.py
